--- a/diss.tex
+++ b/diss.tex
@@ -175,6 +175,7 @@ I would like to thank Dr.~Timothy Jones for supervising this project and for alw
 
 
 \chapter{Project Proposal}
+\label{appendix:initialproposal}
 
 \input{proposal}
 
