--- a/refs.bib
+++ b/refs.bib
@@ -1,21 +1,21 @@
-@ARTICLE{generational,
-TITLE="A real-time garbage collector based on the lifetimes of objects",
-AUTHOR="Henry Lieberman, Carl Hewitt",
-YEAR="1983"}
+@article{generational,
+title="A real-time garbage collector based on the lifetimes of objects",
+author="Lieberman, H. and Hewitt, C.",
+year="1983"}
 
 @ARTICLE{fragmentation,
 TITLE="The Memory Fragmentation Problem: Solved?",
-AUTHOR="Mark S. Johnstone, Paul R. Wilson",
+AUTHOR="Johnstone, M.S. and Wilson, P.R",
 YEAR="1998"}
 
 @ARTICLE{conservative,
 TITLE="Garbage collection in an uncooperative environment",
-AUTHOR="Hans-J. Boehm, Mark Weiser",
+AUTHOR="Boehm, H.J. and Weiser, M.",
 YEAR="1988"}
 
 @ARTICLE{overview,
 TITLE="Garbage collection of linked data structures",
-AUTHOR="Jacques Cohen",
+AUTHOR="Cohen, J.",
 YEAR="1981",
 JOURNAL="ACM Computing Surveys",
 VOLUME="13",
@@ -31,7 +31,7 @@ YEAR="1960"}
 
 @ARTICLE{copyingcollector,
 TITLE="List Processing in Real Time on a Serial Computer",
-AUTHOR="Henry G. Baker",
+AUTHOR="Baker, H.G.",
 JOURNAL="Communications of the ACM",
 VOLUME="21",
 ISSUE="4",
@@ -39,6 +39,24 @@ YEAR="1978"}
 
 @ARTICLE{writebarriers,
 TITLE="A comparative performance evaluation of write barrier implementations",
-AUTHOR="Antony L. Hosking, J. Eliot B. Moss, Darko Stefanovic",
+AUTHOR="Hosking, A.L. and Moss, J.E.B., Stefanovic, D",
 YEAR="1992"
+}
+
+@BOOK{algorithms,
+TITLE="Introduction to Algorithms",
+AUTHOR="Cormen, T.H. and Leiserson, C.D. and Rivest, R.L. and Stein, C.",
+YEAR="2009",
+ISBN="978-0-262-53305-8",
+PUBLISHER="MIT Press"}
+
+@misc{boehmgc,
+  title = "Boehm-Demers-Weiser conservative garbage collector",
+  howpublished = {\url{http://www.hboehm.info/gc/}},
+  author="Boehm, H.J. and Demers, A.J. and Weiser, M.",
+}
+
+@misc{terms,
+  title = "Memory Management Reference",
+  howpublished = {\url{http://www.memorymanagement.org/}}
 }
