--- a/Preparation/preparation.tex
+++ b/Preparation/preparation.tex
@@ -10,7 +10,7 @@ Garbage collection is a form of automatic memory management commonly used within
 
 The user program is known as the mutator because it is the part of the overall system which allocates and modifies objects. The collector is the part which runs a garbage collection algorithm.
 
-Garbage collection algorithms tend to be one of two types: reference counting or tracing collectors. Reference counting collectors \cite{referencecounting} track the number of pointers to each object, when the count becomes 0 the object is removed. The main problem with this approach is that cyclic data-structures are not seen as garbage. Tracing collectors, such as the mark and sweep algorithm, are based on the idea of reachability from a set of starting objects, called the root set. The root set consists of the stack, registers and global data regions which can all contain pointers to objects on the heap. See \cite{overview} for an overview of garbage collection algorithms.
+Garbage collection algorithms tend to be one of two types: reference counting or tracing collectors. Reference counting collectors\cite{referencecounting} track the number of pointers to each object, when the count becomes 0 the object is removed. The main problem with this approach is that cyclic data-structures are not seen as garbage. Tracing collectors, such as the mark and sweep algorithm, are based on the idea of reachability from a set of starting objects, called the root set. The root set consists of the stack, registers and global data regions which can all contain pointers to objects on the heap. See \cite{overview} for an overview of garbage collection algorithms and \cite{terms} for an overview of garbage collection terms.
 
 % Reference memorymanagement.org for details on other terms?
 
@@ -27,7 +27,7 @@ Mark and Sweep is a kind of tracing garbage collection algorithm that is compose
 
 \subsection{Copying Garbage Collection}
 
-Copying garbage collection \cite{copyingcollector} is another form of tracing garbage collection. It splits the heap into two sections: one is used by the program (active heap) and the other is reserved for use during collection. Memory is only allocated to the user program from the active heap. When the garbage collector runs, reachable data is copied from the active heap to the other. Everything in the active heap is removed and the two heaps switch roles. The advantage of this is that fragmentation is handled automatically as part of the copying state which can be seen in Figure \ref{fig:copyingcollection}. The major disadvantage is that only half of the system's memory can be used by the program.
+Copying garbage collection\cite{copyingcollector} is another form of tracing garbage collection. It splits the heap into two sections: one is used by the program (active heap) and the other is reserved for use during collection. Memory is only allocated to the user program from the active heap. When the garbage collector runs, reachable data is copied from the active heap to the other. Everything in the active heap is removed and the two heaps switch roles. Fragmentation is handled automatically as the copied objects are placed in contiguous memory locations which can be seen in Figure \ref{fig:copyingcollection}. The major disadvantage is that only half of the system's memory can be used by the program.
 
 \begin{figure}
     \centering
@@ -39,11 +39,11 @@ Copying garbage collection \cite{copyingcollector} is another form of tracing ga
 \subsection{Generational Garbage Collection} \label{sec:generationalgarbagecollection}
 % Explain this section a lot more
 
-My project uses the generational garbage collection algorithm \cite{generational}, which is based on the assumption that most objects die shortly after being allocated. Another way to think about this is that an object which has survived many collections has a high probability of being a long-lived object, and because of this we do not need to consider it for collection every time.
+My project uses the generational garbage collection algorithm\cite{generational}, which is based on the assumption that most objects die shortly after being allocated. Another way to think about this is that an object which has survived many collections has a high probability of being a long-lived object, and because of this we do not need to consider it for collection every time.
 
-A generation is a set of objects of similar age. The generational algorithm works by segregating objects into generations. When collecting, the garbage collector will check younger generations more frequently than older ones. If an object survives collection it is promoted into the next generation (unless already in the oldest generation). Sometimes, different collection algorithms are used on the new and old generations. A common scenario for a garbage collector with $N$ generations is to use a copy collector for the youngest $N-1$ generations and mark and sweep for the oldest one. The reason for this is that copy collection gives us the promotion step and defragmentation without any extra processing.
+The generational algorithm works by segregating the heap into generations, which contain objects of similar age. When collecting, the garbage collector will check younger generations more frequently than older ones. If an object survives collection it is promoted into the next generation (unless already in the oldest generation). Sometimes, different collection algorithms are used on the new and old generations. A common scenario for a garbage collector with $N$ generations is to use a copy collector for the youngest $N-1$ generations and mark and sweep for the oldest one. The reason for this is that copy collection gives us the promotion step and defragmentation without any extra processing.
 
-The benefit of the generational algorithm is that each collection should be faster as the number of objects it has to consider is lower when compared to a mark and sweep garbage collector. In the latter, this can lead to a visible pause which is undesirable. There are limits to the generational algorithm, in particular it is not always comprehensive (it may fail to collect all the garbage). An example of this can be seen in Figure \ref{fig:generational} where an object is referenced by an older object which itself is garbage. When not collecting older objects they are treated as live. This does not mean that garbage left behind after one collection will not be collected in another collection.
+The benefit of the generational algorithm is that each collection should be faster as the number of objects it has to consider is lower when compared to a mark and sweep garbage collector. In the latter, this can lead to a visible pause which is undesirable. There are limits to the generational algorithm, in particular it is not always comprehensive (it may fail to collect all the garbage). An example of this can be seen in Figure \ref{fig:generational} where an object is referenced by an older object which itself is garbage. When not collecting older objects they are treated as live. This does not mean that garbage left behind after one collection will not be collected in another.
 
 \begin{figure}
     \centering
@@ -54,15 +54,13 @@ The benefit of the generational algorithm is that each collection should be fast
 
 \subsection{Write Barriers} \label{sec:prepwritebarriers}
 
-A write barrier intercepts writes to certain memory locations, therefore allowing the program to track changes to the memory. Depending on the write barrier implementation the write may or may not occur, but for garbage collection we allow the write to happen. Garbage collectors rely on knowing what references are contained within each object. The generational algorithm only considers objects in specific generations each time, the write-barrier allows it to know if an object is referenced by an older object. Some studies show the number of older to younger references to be less than 1\% of all references. However, without knowing that these pointers exist we risk collecting live objects.
+A write-barrier\cite{writebarriers} intercepts writes to certain memory locations, therefore allowing the program to track changes to the memory. Depending on the implementation the write may or may not occur, but for garbage collection we allow the write to happen. Garbage collectors rely on knowing what references are contained within each object. The generational algorithm only considers objects in specific generations each time, the write-barrier allows it to know if an object is referenced by an older object. Some studies show the number of older to younger references to be less than 1\% of all references. However, without knowing that these pointers exist we risk collecting live objects.
 
-One way of implementing a write barrier is to insert a small thunk before every pointer assignment which records in a card-table that a particular block of memory is dirty. When collecting we include every object in a dirty block of memory as being a root. This form of write-barrier requires compiler support to insert the thunk before every pointer assignment.
-
-When we do not have compiler or hardware support for the write-barrier then we must use an alternative which may depend on the platform being used. Most operating systems allow permissions to be specified for parts of the memory. This can be used to implement a write-barrier by marking blocks of memory as read-only and trapping the resultant segmentation fault. This is the approach used by my garbage collector, \cref{sec:writebarrier} provides the implementation details.
+One way of implementing a write-barrier is to insert a small thunk before every pointer assignment which records in a card-table that a particular block of memory is dirty. When collecting we include every object in a dirty block of memory as being a root. This requires compiler support to insert the thunk before every pointer assignment and therefore is unsuitable for my solution. Most operating systems allow permissions to be specified for parts of the memory. This can be used to implement a write-barrier in software by marking blocks of memory as read-only and trapping the resultant segmentation fault. This is the approach used by my garbage collector, \cref{sec:writebarrier} provides the implementation details.
 
 \subsection{Conservative Collection} \label{lab:conservative}
 
-Conservative collection is useful for adding garbage collection to a programming language which never intended to have it as a feature. When we are in an environment where it is not possible to know which values are references, we make the conservative decision to threat any value which \emph{might} be a pointer as a reference. Figure \ref{fig:conservative} gives an example of how this looks. The drawback of this approach is that we may find a value which looks like a pointer to an object but in actual fact it was just a numerical value. It is not possible to implement a full copying collector that is conservative. A copying collector moves the objects to new locations which requires updating the references to them, but we do not know for sure that the value was a pointer thus the update operation is not safe. Another implication of this is that we cannot perform compaction to remove fragmentation for the same reasons.
+Conservative collection\cite{conservative} is useful for adding garbage collection to a programming language which never intended to have it as a feature. When we are in an environment where it is not possible to know which values are references, we make the conservative decision to threat any value which \emph{might} be a pointer as a reference. Figure \ref{fig:conservative} shows an example of this conservative decision. The drawback of this approach is that we may find a value which looks like a pointer to an object but in actual fact it was just a numerical value. It is not possible to implement a full copying collector that is conservative. A copying collector moves the objects to new locations which requires updating the references to them, but we do not know for sure that the value was a pointer thus the update operation is not safe. Another implication of this is that we cannot perform compaction to remove fragmentation for the same reasons.
 
 \begin{figure}
     \centering
@@ -85,13 +83,13 @@ Although it was not planned to be thread-safe initially, I added this feature as
 
 \section{Requirements Analysis} \label{sec:requirements}
 
-Having looked at the basics of generational and conservative collection, we can consider the project requirements. Here I will also discuss the requirements of the thread-safety extension. These are closely linked to the Success Criteria from the initial proposal (Appendix X). Table \ref{tab:requirements} provides a high-level summary of all the requirements.
+Having looked at the basics of generational and conservative collection, we can consider the project requirements. Here I will also discuss the requirements of the thread-safety extension. These are closely linked to the success criteria from the initial proposal (Appendix \ref{appendix:initialproposal}). Table \ref{tab:requirements} provides a high-level summary of all the requirements.
 
 \subsubsection{Allocation}
 
-It is important that the main program be able to allocate memory. For garbage collection to work as expected it needed to know what objects have previously been allocated and contain some meta-data for each one. This ties into the first success criterion: \emph{``produce a garbage collector which never collects a live object''}. Efficient data-structures were implemented to contain the required information to give the best possible performance. Another implication of the first success criterion is that it needs a method of finding objects with pointers to other objects. To achieve this I implemented a write-barrier which tracks writes to the allocated objects and therefore allows the garbage collector to inspect the contents for pointers. These requirements were of high priority due to the close relation to the success criteria.
+It is important that the main program be able to allocate memory. For garbage collection to work as expected it needed to know what objects have previously been allocated and contain some meta-data for each one. This ties into the first success criterion: \emph{``produce a garbage collector which never collects a live object''}. Efficient data-structures were implemented to contain the required information to give the best possible performance. Another implication of the first success criterion is that it needed a method of finding objects with pointers to other objects. To achieve this I implemented a write-barrier which tracks writes to the allocated objects and therefore allows the garbage collector to inspect the contents for pointers. These requirements were of high priority due to the close relation to the success criteria.
 
-Fragmentation was also a concern for long-running programs, I previously stated that an explicit compaction step is not possible in a conservative collector. This was a low priority requirement because machines with sufficient memory can tolerate small amounts of fragmentation and my evaluation benchmarks were all short-running.
+Fragmentation was also a concern for long-running programs, I previously stated that an explicit compaction step is not possible in a conservative collector. This was a low priority requirement because machines with sufficient memory can tolerate small amounts of fragmentation.
 
 \subsubsection{Collection}
 
@@ -101,7 +99,7 @@ The second success criterion states that \emph{``the garbage collector should ru
 
 \subsubsection{Multi-threading}
 
-To be able to coordinate the collection (recall that it uses a stop-the-world approach) the garbage collector needed to store information about each thread. Every thread has its own stack, whose location must be known to compute the root set. Mutual exclusion was critical to protect access to shared variables. At different stages of the collection, threads have to wait for a condition to be true or signal that some work was completed. It uses condition variables for each of the stages so that threads can communicate. These requirements are not critical as they are part of an extension to the project however they are of high risk as bugs in the code could break the garbage collector.
+To be able to coordinate the collection (recall that it uses a stop-the-world approach) the garbage collector needed to store information about each thread. Every thread has its own stack, whose location must be known to compute the root set. Mutual exclusion was critical to protect concurrent access to shared variables. At different stages of the collection, threads have to wait for a condition to be true or signal that some work was completed. It uses condition variables for each of the stages so that threads can communicate. These requirements are not critical as they are part of an extension to the project however they are of high risk as bugs in the code could break the garbage collector.
 
 \begin{table}
     \centering
@@ -131,7 +129,7 @@ Naturally, C was chosen as my primary programming language and C++ for writing m
 
 I used Git for revision control which is of key importance for large projects. I used BitBucket for hosting which also acts as my primary backup. At the end of every week I also created a copy of the progress to a memory pen. Matlab and LaTeX are also used to produce graphs for evaluation and for producing the corresponding documentation respectively.
 
-It was important to check that use of the listed software was allowed under the specified licenses before starting any work. As I am releasing my solution as open-source software with an MIT licence it can be adequately described as "non-commercial". Many of the libraries used have open-source licences such as the APSL, University of Illinois/NCSA, BSDv3, GPLv2 and Boost Software Licennce 1.0. All of these allow the creation of my garbage collector with the common limitation that the creators cannot be held liable for any damages. Matlab and CLion have proprietary licences, I am specifically using the student versions of these pieces of software. The licences specify that these can be used for non-commercial projects and therefore are suitable for my purposes.
+It was important to ensure that the use of the listed software was allowed under the specified licences before starting any work. As I am releasing my solution as open-source software with an MIT licence it can be adequately described as `non-commercial'. Many of the libraries used have open-source licences such as the APSL, University of Illinois/NCSA, BSDv3, GPLv2 and Boost Software Licence 1.0. All of these allow the creation of my garbage collector with the common limitation that the creators cannot be held liable for any damages. Matlab and CLion have proprietary licences, I am specifically using the student versions of these pieces of software. The licences specify that these can be used for non-commercial projects and therefore are suitable for my purposes.
 
 \begin{table}
     \centering
